<resources>
    <string name="app_name">Snapchat Clone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Map</string>
    <string name="chat">Chat</string>
    <string name="camera">Camera</string>
    <string name="stories">Stories</string>
    <string name="discover">Discover</string>
    <string name="ibrahim">Ibrahim</string>
    <string name="tap_to_chat">Tap to chat</string>
    <string name="maria">Maria</string>
    <string name="quick_add">Quick Add</string>
    <string name="samuel">Samuel</string>
    <string name="samson">samson1</string>
    <string name="add">Add</string>
    <string name="sophia">Sophia</string>
    <string name="sophie">sophie</string>
    <string name="aisha">Aisha</string>
    <string name="aiii">aii431</string>
    <string name="paul">Paul</string>
    <string name="paul_kiki">paul_kiki</string>
    <string name="prisha">Prisha</string>
    <string name="prisha_name">prisha_aditya</string>
    <string name="omar">Omar</string>
    <string name="omar_hamed">omar_ahmed</string>
    <string name="alex">Alex</string>
    <string name="alex_name">alexis_sanchez</string>
    <string name="friends">Friends</string>
    <string name="my_story">My Story</string>
    <string name="ibrajix">ibrajix</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="kakashi_face">Kakashi Real Face Disclosed</string>
    <string name="wizkid_text">Wizkid set to release new album</string>
    <string name="nani">nani</string>
    <string name="netflix">netflix</string>
    <string name="olympics_2021">Olympics 2021</string>
    <string name="badminton_result">Badminton Result</string>
    <string name="medal_ranking">Medal Rankings</string>
    <string name="olympic_happenings">Olympic Games</string>
    <string name="inuwa_ibrahim">Inuwa Ibrahim</string>
    <string name="trending">Trending</string>
    <string name="yemi_alade">Yemi Alade</string>
    <string name="yemi_alade_name">yemialade</string>
    <string name="burna_boy">Burna Boy</string>
    <string name="burna_boy_name">burna_boy</string>
    <string name="kendrick_lamar_name">kendrick_dot</string>
    <string name="kendrick_lamar">Kendrick Lamar</string>
    <string name="rihanna">Rihanna</string>
    <string name="riri_name">badgirlriri</string>
    <string name="snap_mao">Snap Map</string>
    <string name="snap_map">Snap Map</string>
    <string name="_4h">4h</string>
    <string name="send_a_chat">Send a Chat</string>
</resources>